# workday-summarizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/workday_summarizer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  errors.py  frames.py  models.py  pipeline.py  pricing.py  prompts.py  reporting.py  usage.py
tests/: conftest.py  test_analyzer.py  test_frames.py  test_models.py  test_pipeline.py  test_pricing.py  test_usage.py
