[project]
name = "workday-summarizer"
version = "0.1.0"
description = "Turn a screen recording of your workday into a structured summary of tasks and distractions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luke Nielsen" }]
keywords = ["openai", "vision", "video", "productivity", "summarization"]

dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
workday-summarizer = "workday_summarizer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workday_summarizer"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
# En/em dashes are used intentionally in user-facing strings and docstrings.
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
# Typer expects its Argument/Option markers as call-expression defaults.
"src/workday_summarizer/cli.py" = ["B008"]
# Tests reach into a couple of private helpers by design.
"tests/*" = ["SLF001"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
